--- a/foun.ipynb
+++ b/foun.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -19,7 +19,7 @@
        "' !pip install plotly\\n!pip install --upgrade nbformat\\n '"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -39,9 +39,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\jmitc\\AppData\\Local\\Temp\\ipykernel_21656\\1681320482.py:1: DeprecationWarning: \n",
+      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
+      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
+      "but was not found to be installed on your system.\n",
+      "If this would cause problems for you,\n",
+      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
+      "        \n",
+      "  import pandas as pd\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -59,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +155,7 @@
        "1  2024      27270  43000     90000           20000          25000       36000"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +267,7 @@
        "1       36000      264626.28        205270  "
       ]
      },
-     "execution_count": 99,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +360,7 @@
        "1       36000      264626.28        205270  77.57  "
       ]
      },
-     "execution_count": 100,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +483,7 @@
        "1       34.01              7.56             9.45          13.6  "
       ]
      },
-     "execution_count": 101,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -615,7 +630,7 @@
        "[2 rows x 22 columns]"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -637,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -650,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1684,6 +1699,16 @@
     "fig.update_layout(hovermode='x unified')\n",
     "\n",
     "fig.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export graph to html\n",
+    "fig.write_html(\"HouseHoldBudgetTrends.html\")"
    ]
   }
  ],
